--- a/design.html
+++ b/design.html
@@ -5,7 +5,10 @@
         <Title>Voyager Game</Title>
     </head>   
     <body>
-        <h1>Game Description</h1>
-        <p>Here we descirbe what the game is about</p>
+        <h1>Adventures of the Voyager</h1>
+        <p><b>In this game you will be able to take part in navigating the Voyager through the treacherous reaches of space!</b></p>
+        <hr>
+        <p>The captain will control if the Voyager moves left, right, up, or down.</p>
+        <p>But be careful! There are many threats in space that need to be avoided...</p>
     </body>
 </html>
