--- a/design.html
+++ b/design.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html> 
     <head>
          <meta charset="UTF=8">
         <Title>Voyager Game</Title>
-    </head>   
+    </head> <!--This Update is putting some finishing touches on the design website-->
     <body>
         <h1>Adventures of the Voyager</h1>
         <p><b>In this game you will be able to take part in navigating the Voyager through the treacherous reaches of space!</b></p>
