--- a/design.html
+++ b/design.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html> 
-    <head>
-         <meta charset="UTF=8">
-        <Title>Voyager Game</Title>
-    </head> <!--This Update is putting some finishing touches on the design website-->
-    <body>
-        <h1>Adventures of the Voyager</h1>
-        <p><b>In this game you will be able to take part in navigating the Voyager through the treacherous reaches of space!</b></p>
-        <hr>
-        <p>The captain will control if the Voyager moves left, right, up, or down.</p>
-        <p>But be careful! There are many threats in space that need to be avoided...</p>
-    </body>
+<meta charset="UTF-8">
+<head>
+    <title>Voyager Game</title>
+    </head>
+<h2></h2>
+
+<body>
+    <h1>Starship Voyager Game</h1>
+    <h2>Our game is a space game where the starship Voyager flies through space and evades objects.</h2>
+                <p><b>In this game, you will be the captain of your own starship and you will control the flight path.</b></p>
+                <hr>
+            </body>
+    <a href="index.html">Index</a>
+    <br>
+    <a href="resources.html">Resources</a>
+</body>
 </html>
