--- a/resources.html
+++ b/resources.html
@@ -6,12 +6,21 @@
     </head>   
     <body>
         <h1>Resources</h1>
-        <p>Here we cite our sources</p>
-        <p> We would use the link for adding URL's once we find sources.</p>
-
-        http://trekcore.com/blog/2013/07/voyagers-visual-effects-creating-the-cg-voyager-with-rob-bonchune/
-        http://memory-alpha.wikia.com/wiki/File:Borg_Sphere_studio_model.jpg
-        http://memory-alpha.wikia.com/wiki/Starfleet_insignia
+        <h2>Images:</h2>
+        <a href="https://www.bing.com/images/search?q=space+photos&qpvt=space+photos&FORM=IGRE">Bing "Space" Images for backgrounds</a>
+        <br>
+        <a href="http://www.starshipmodeler.com/trek/voytech.htm">Starship Modeler for our main spaceship</a>
+        <br>
+        <a href="http://memory-alpha.wikia.com/wiki/File:Borg_Sphere_studio_model.jpg">Borg Sphere</a>
+        <br>
+        <a href="http://memory-alpha.wikia.com/wiki/Starfleet_insignia">Starfleet Insignia for page logo</a>
+        <h2>Borrowed Code:</h2>
+        <a href="https://learn.zybooks.com/zybook/WHITWORTHCS301Spring2019/chapter/5/section/4">Zybooks Chapter 4</a>
+        <br>
+        <h2>Links back:</h2>
+        <a href="design.html">Design</a>
+        <br>
+        <a href="index.html">Index</a>
     </body>
 
 </html>
