Update design.html to include site links

--- a/design.html
+++ b/design.html
@@ -2,10 +2,16 @@
 <meta charset="UTF-8">
 <head>
     <title>Voyager Game</title>
+    <link href="css/style.css" type="text/css" rel="stylesheet" />
     </head>
 <h2></h2>
 
 <body>
+    <ul>
+        <li><a href="index.html">Game</a></li>
+        <li><a href="design.html">Design</a></li>
+        <li><a href="resources.html" class="active">Resources</a></li>
+    </ul>
     <h1>Starship Voyager Game</h1>
     <h2>Our game is a space game where the starship Voyager flies through space and evades objects.</h2>
                 <p><b>In this game, you will be the captain of your own starship and you will control the flight path.</b></p>
