Update resources.html to include site links

--- a/resources.html
+++ b/resources.html
@@ -3,8 +3,14 @@
     <head>
          <meta charset="UTF=8">
         <Title>Resources</Title>
+        <link href="css/style.css" type="text/css" rel="stylesheet" />
     </head>   
     <body>
+        <ul>
+            <li><a href="index.html">Game</a></li>
+            <li><a href="design.html">Design</a></li>
+            <li><a href="resources.html" class="active">Resources</a></li>
+        </ul>    
         <h1>Resources</h1>
         <h2>Images:</h2>
         <a href="https://www.bing.com/images/search?q=space+photos&qpvt=space+photos&FORM=IGRE">Bing "Space" Images for backgrounds</a>
