--- a/design.html
+++ b/design.html
@@ -9,8 +9,8 @@
 <body>
     <ul>
         <li><a href="index.html">Game</a></li>
-        <li><a href="design.html">Design</a></li>
-        <li><a href="resources.html" class="active">Resources</a></li>
+        <li><a href="design.html" class="active">Design</a></li>
+        <li><a href="resources.html">Resources</a></li>
     </ul>
     <h1>Starship Voyager Game</h1>
     <h2>Our game is a space game where the starship Voyager flies through space and evades objects.</h2>
