Fixed links on sites

--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <html>
 <header>
     <title>Voyager</title>
+    <link href="css/style.css" type="text/css" rel="stylesheet" />
 </header>
 <body>
-    <a href="design.html">Design</a>
-    <br>
-    <a href="resources.html">Resources</a>
+    <ul>
+        <li><a href="index.html" class="active">Game</a></li>
+        <li><a href="design.html">Design</a></li>
+        <li><a href="resources.html">Resources</a></li>
+    </ul>
+    <img src="images/Voyager_lights.gif">
 </body>
 </html>
