Readded logo and made it a link to index.html

--- a/design.html
+++ b/design.html
@@ -14,5 +14,6 @@
     <h1>Starship Voyager Game</h1>
     <h2>Our game is a space game where the starship Voyager flies through space and evades objects.</h2>
     <p><b>In this game, you will be the captain of your own starship and you will control the flight path.</b></p>
+    <a href="index.html"><img src="images/starfleet_emblem.png" alt=logo id="logo" height="47"></a>
 </body>
 </html>
