--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
         <li><a href="resources.html">Resources</a></li>
     </ul>
     <img src="images/Voyager_lights.gif">
+    <a href="index.html"><img src="images/starfleet_emblem.png" alt=logo id="logo" height="47"></a>
 </body>
 </html>
