--- a/resources.html
+++ b/resources.html
@@ -23,6 +23,7 @@
         <h2>Borrowed Code:</h2>
         <a href="https://learn.zybooks.com/zybook/WHITWORTHCS301Spring2019/chapter/5/section/4">Zybooks Chapter 4</a>
         <br>
+        <a href="index.html"><img src="images/starfleet_emblem.png" alt=logo id="logo" height="47"></a>
     </body>
 
 </html>
