Updated to utilize <nav>
Also, created better navigation where the links and logo do not change if you the body is long enough to require scrolling (though I changed text alignment to left because I couldn't figure out for the time being how to prevent the text from shifting when the scroll bar appeared).

--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-<meta charset="UTF-8">
 <html>
-<header>
-    <title>Voyager</title>
-    <link href="css/style.css" type="text/css" rel="stylesheet" />
-</header>
-<body>
-    <ul>
-        <li><a href="index.html" class="active">Game</a></li>
-        <li><a href="design.html">Design</a></li>
-        <li><a href="resources.html">Resources</a></li>
-    </ul>
-    <img src="images/Voyager_lights.gif">
-    <a href="index.html"><img src="images/starfleet_emblem.png" alt=logo id="logo" height="47"></a>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Voyager</title>
+        <link href="css/style.css" type="text/css" rel="stylesheet" />
+    </head>
+    <body>
+        <nav>
+            <ul>
+                <li><a href="index.html" class="active">Game</a></li>
+                <li><a href="design.html">Design</a></li>
+                <li><a href="resources.html">Resources</a></li>
+            </ul>
+        </nav>
+        <img src="images/Voyager_lights.gif" alt=Voyager_gif_with_blinking_lights>
+        <a href="index.html"><img src="images/starfleet_emblem.png" alt=logo id="logo" height="47"></a>
+    </body>
 </html>
