--- a/design.html
+++ b/design.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<meta charset="UTF-8">
 <head>
-    <title>Voyager Game</title>
+    <meta charset="UTF-8">
+    <title>Voyager - Design</title>
     <link href="css/style.css" type="text/css" rel="stylesheet" />
 </head>
 
 <body>
-    <ul>
-        <li><a href="index.html">Game</a></li>
-        <li><a href="design.html" class="active">Design</a></li>
-        <li><a href="resources.html">Resources</a></li>
-    </ul>
+    <nav>
+        <ul>
+            <li><a href="index.html">Game</a></li>
+            <li><a href="design.html" class="active">Design</a></li>
+            <li><a href="resources.html">Resources</a></li>
+        </ul>
+    </nav>
     <h1>Starship Voyager Game</h1>
     <h2>Our game is a space game where the starship Voyager flies through space and evades objects.</h2>
     <p><b>In this game, you will be the captain of your own starship and you will control the flight path.</b></p>
