--- a/resources.html
+++ b/resources.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-         <meta charset="UTF=8">
-        <Title>Resources</Title>
+        <meta charset="UTF=8">
+        <Title>Voyager - Resources</Title>
         <link href="css/style.css" type="text/css" rel="stylesheet" />
     </head>   
     <body>
-        <ul>
-            <li><a href="index.html">Game</a></li>
-            <li><a href="design.html">Design</a></li>
-            <li><a href="resources.html" class="active">Resources</a></li>
-        </ul>    
+        <nav>
+            <ul>
+                <li><a href="index.html">Game</a></li>
+                <li><a href="design.html">Design</a></li>
+                <li><a href="resources.html" class="active">Resources</a></li>
+            </ul>    
+        </nav>
         <h1>Resources</h1>
         <h2>Images:</h2>
         <a href="https://www.bing.com/images/search?q=space+photos&qpvt=space+photos&FORM=IGRE">Bing "Space" Images for backgrounds</a>
@@ -21,7 +23,7 @@
         <br>
         <a href="http://memory-alpha.wikia.com/wiki/Starfleet_insignia">Starfleet Insignia for page logo</a>
         <h2>Borrowed Code:</h2>
-        <a href="https://learn.zybooks.com/zybook/WHITWORTHCS301Spring2019/chapter/5/section/4">Zybooks Chapter 5.4</a>
+        <a href="https://learn.zybooks.com/zybook/WHITWORTHCS301Spring2019/chapter/5/section/4">Zybooks Chapter 4</a>
         <br>
         <a href="index.html"><img src="images/starfleet_emblem.png" alt=logo id="logo" height="47"></a>
     </body>
