Created branch AOKins and made changes to format
Also updated resources to more accurate references

--- a/design.html
+++ b/design.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<head>
-    <meta charset="UTF-8">
-    <title>Voyager - Design</title>
-    <link href="css/style.css" type="text/css" rel="stylesheet" />
-</head>
-
-<body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Game</a></li>
-            <li><a href="design.html" class="active">Design</a></li>
-            <li><a href="resources.html">Resources</a></li>
-        </ul>
-    </nav>
-    <h1>Starship Voyager Game</h1>
-    <h2>Our game is a space game where the starship Voyager flies through space and evades objects.</h2>
-    <p><b>In this game, you will be the captain of your own starship and you will control the flight path.</b></p>
-    <a href="index.html"><img src="images/starfleet_emblem.png" alt=logo id="logo" height="47"></a>
-</body>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <title>Voyager - Design</title>
+        <link href="css/style.css" type="text/css" rel="stylesheet" />
+    </head>
+    <body>
+        <a href="index.html"><img src="images/starfleet_emblem.png" alt=logo id="logo" height="47"></a>
+        <nav>
+            <ul>
+                <li><a href="index.html">Game</a></li>
+                <li><a href="design.html" class="active">Design</a></li>
+                <li><a href="resources.html">Resources</a></li>
+            </ul>
+        </nav>
+        <h1>Starship Voyager Game</h1>      
+        <h2>Our game is a space game where the starship Voyager flies through space and evades objects.</h2>
+        <p><b>In this game, you will be the captain of your own starship and you will control the flight path.</b></p>
+    </body>
 </html>
