Changes to CSS, Resources added, Images stacked

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en"></html>
     <head>
         <meta charset="UTF-8">
         <title>Voyager</title>
@@ -13,7 +13,12 @@
                 <li><a href="resources.html">Resources</a></li>
             </ul>
         </nav>
-        <img src="images/Voyager_lights.gif" alt=Voyager_gif_with_blinking_lights>
-        <a href="index.html"><img src="images/starfleet_emblem.png" alt=logo id="logo" height="47"></a>
+        <a href="index.html"><img src="images/starfleet_emblem.png" alt= Starship Voyager logo id="logo" height="47"></a>
+ /*Created img class with pointers in CSS*/       
+        <img class="bg3" src="images/VoyagerBackground3.png" alt=Flaming Asteroids>
+        <img class="bg2" src="images/VoyagerBackground2.png" alt=Asteroids>
+        <img class="bg" src="images/VoyagerBackground.png" alt=Starry sky>
+        <img class="voy" src="images/Voyager_lights.gif" alt=Voyager_gif_with_blinking_lights>
+
     </body>
 </html>
