--- a/resources.html
+++ b/resources.html
@@ -23,8 +23,11 @@
         <br>
         <a href="http://memory-alpha.wikia.com/wiki/Starfleet_insignia">Starfleet Insignia for page logo</a>
         <h2>Borrowed Code:</h2>
-        <a href="https://learn.zybooks.com/zybook/WHITWORTHCS301Spring2019/chapter/5/section/4">Zybooks Chapter 4</a>
+        <a href="https://learn.zybooks.com/zybook/WHITWORTHCS301Spring2019/chapter/5/section/1">Zybooks Chapter 5, section 1</a>
         <br>
+        <a href="https://learn.zybooks.com/zybook/WHITWORTHCS301Spring2019/chapter/5/section/4">Zybooks Ch 5, Section 4</ahref>
+        
+        
         <a href="index.html"><img src="images/starfleet_emblem.png" alt=logo id="logo" height="47"></a>
     </body>
 
