fixed comment in indexhtml

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </ul>
         </nav>
         <a href="index.html"><img src="images/starfleet_emblem.png" alt= Starship Voyager logo id="logo" height="47"></a>
- /*Created img class with pointers in CSS*/       
+ <!--Created img class with pointers in CSS-->  
         <img class="bg3" src="images/VoyagerBackground3.png" alt=Flaming Asteroids>
         <img class="bg2" src="images/VoyagerBackground2.png" alt=Asteroids>
         <img class="bg" src="images/VoyagerBackground.png" alt=Starry sky>
