Updated nav, made black background

--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en">
     <head>
         <meta charset="UTF-8">
-        <title>Voyager</title>
+        <title>Voyager - Game</title>
         <link href="css/style.css" type="text/css" rel="stylesheet" />
     </head>
     <body>
         <a href="index.html"><img src="images/starfleet_emblem.png" alt=logo id="logo" height="47"></a>
         <nav>
             <ul>
-                <li><a href="index.html" class="active">Game</a></li>
-                <li><a href="design.html">Design</a></li>
-                <li><a href="resources.html">Resources</a></li>
+                <li><a href="index.html" class="active">GAME</a></li>
+                <li><a href="design.html">DESIGN</a></li>
+                <li><a href="resources.html">RESOURCES</a></li>
             </ul>
         </nav>
-        <img src="images/Voyager_lights.gif" alt=Voyager_gif_with_blinking_lights>        
+ <!--Created img class with pointers in CSS-->  
+        <img class="bg3" src="images/VoyagerBackground3.png" alt=Flaming Asteroids>
+        <img class="bg2" src="images/VoyagerBackground2.png" alt=Asteroids>
+        <img class="bg" src="images/VoyagerBackground.png" alt=Starry sky>
+        <img class="voy" src="images/Voyager_lights.gif" alt=Voyager_gif_with_blinking_lights>
     </body>
 </html>
