Added comments, replaced logo with gif

--- a/design.html
+++ b/design.html
@@ -5,9 +5,8 @@
         <title>Voyager - Design</title>
         <link href="css/style.css" type="text/css" rel="stylesheet" />
     </head>
-
     <body>
-        <a href="index.html"><img src="images/starfleet_emblem.png" alt=logo id="logo" height="47"></a>
+        <a href="index.html"><img src="images/Starfleet-logo.gif" alt=logo id="logo"></a>
         <nav>
             <ul>
                 <li><a href="index.html">GAME</a></li>
