--- a/index.html
+++ b/index.html
@@ -20,4 +20,5 @@
         <img class="bg" src="images/VoyagerBackground.png" alt=Starry sky>
         <img class="voy" src="images/Voyager_lights.gif" alt=Voyager_gif_with_blinking_lights>
     </body>
+    <!--Checking to see if branching is working-->
 </html>
