Added js with Voyager.js

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Voyager - Game</title>
         <link href="css/style.css" type="text/css" rel="stylesheet" />
+        <script src="js/voyager.js" defer></script>
     </head>
     <body>
         <a href="index.html"><img src="images/Starfleet-logo.gif" alt=logo id="logo" ></a>
