--- a/resources.html
+++ b/resources.html
@@ -29,5 +29,5 @@
         <br>
         <a href="https://learn.zybooks.com/zybook/WHITWORTHCS301Spring2019/chapter/5/section/4">Zybooks Ch 5, Section 4</a>
     </body>
-
+<!--script code here-->
 </html>
