Added resources and game instructions

--- a/design.html
+++ b/design.html
@@ -14,9 +14,14 @@
                 <li><a href="resources.html">RESOURCES</a></li>
             </ul>
         </nav>
-        <h1>Starship Voyager Game</h1>
-        <h2>Our game is a space game where the starship Voyager flies through space and evades objects.</h2>
-        <p><b>In this game, you will be the captain of your own starship and you will control the flight path.</b></p>
+        <h1>The Starship Voyager Game</h1>
+        <h2>Be the captain of the starship Voyager!</h2>
+        <p>In this game, you will be the captain of your own starship and you will control the flight path as you navigate through space past burning asteroids.</p>
+           <ul><li>To START the game, click on "Game" at the top of the page.</li>
+           <li>Use the UP and DOWN arrows on the keyboard to move the starship Voyager up and down to avoid the oncoming asteroids.</li>
+           <li>To EXIT the game, close the browser</li>
+        <h2>Good luck Captain!!</h2></ul>
+        </p>
     </body>
 </html>
 
