--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </ul>
         </nav>
         <div id="voyager"></div>
-        <input type="button" id="music_button" class="button" value="Music: Off"><audio id="audio1" src="http://voy.trekcore.com/audio/themes/caretaker/10BattleForTheArray.mp3" loop type="audio/mpeg" play></audio>
+        <input type="button" id="music_button" class="button" value="Music: Off"><audio id="audio1" src="http://voy.trekcore.com/audio/themes/caretaker/10BattleForTheArray.mp3" loop type="audio/mpeg" play></audio></input>
         <script src="js/voyager.js" defer></script>
         <script src="js/animation.js" defer></script>
         <script src="js/music.js" defer></script>
